--- a/css/styles.css
+++ b/css/styles.css
@@ -38,3 +38,11 @@ header h2 {
   position: absolute;
   right: 0;
   bottom: 0; }
+
+#reserveModal .modal-header {
+  background-color: #CEC8FF;
+  color: white; }
+
+#loginModal .modal-header {
+  background-color: #901CAD;
+  color: white; }
